Wypychanie wszystkich zmian

--- a/WunderwaffeModelShop/Views/Home/Index.cshtml
+++ b/WunderwaffeModelShop/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    Dla nauki zrobie tutaj kawałek tekstu testowego. UwU
+    <h1 class="display-4">Witaj na stornie Wunderwaffe model shop!</h1>
+    <p>Tutaj znadziesz model z niemieckich planów Wunderwaffe!</p>
+    <img src="ratte.jpg" alt="Ratte" />
+    <img src="ee.jpg" alt="ee"/>
 </div>
